--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
     <body>
         <header>
-            <div id="logo"><img src="images/logo.png" alt=""></div>
+            <div id="logo"><img src="logo.png" alt=""></div>
             <ul id="nav-tabs">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experiences">Experience</a></li>
                 <li><a href="#">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
-                <li><a href="/Tushar_Dasare.pdf">Resume</a></li>
+                <li><a href="Tushar_Dasare.pdf">Resume</a></li>
             </ul>
             <div id="menu-btn" onclick="toggleMenu()">
                 <div class="menu-bars" id="bar1"></div>
@@ -38,7 +38,7 @@
                     <a href="#contact-section"><button class="border-btn">Contact me</button></a>
                 </div>
                 <div id="hero-image">
-                    <img src="/images/hero-img.png" alt="">
+                    <img src="hero-img.png" alt="">
                 </div>
             </section>
             <section id="about">
@@ -75,7 +75,7 @@
             <div id="skills-container">
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/python-logo.png" alt="">
+                        <img src="python-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Python</span>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/django-logo.png" alt="">
+                        <img src="django-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Django</span>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/react-logo.png" alt="">
+                        <img src="react-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>React.js</span>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/ionic.png" alt="">
+                        <img src="ionic.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>React Ionic</span>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/javascript-logo.png" alt="">
+                        <img src="javascript-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Javascript</span>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/nodejs-logo.png" alt="">
+                        <img src="nodejs-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Node.js</span>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="/images/git-logo.png" alt="">
+                        <img src="git-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Git Source <br> control</span>
@@ -136,10 +136,10 @@
         <section id="contact-section">
             <h3 class="heading-center">Contact Me</h3>
             <div id="contact">
-                <a href="mailto:tushardasare1701@gmail.com" class="contact-tab"><img src="/images/gmail.png" alt=""> tushardasare1701@gmail.com</a>
-                <a href="tel:+917304431820" class="contact-tab"><img src="/images/phone.png" alt="">7304431820</a>
-                <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" class="contact-tab"><img src="/images/linkedin.png" alt="">LinkedIn</a>
-                <a href="https://wa.me/+917304431820" class="contact-tab"><img src="/images/wattsapp.png" alt="">WhatsApp me</a>
+                <a href="mailto:tushardasare1701@gmail.com" class="contact-tab"><img src="gmail.png" alt=""> tushardasare1701@gmail.com</a>
+                <a href="tel:+917304431820" class="contact-tab"><img src="phone.png" alt="">7304431820</a>
+                <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" class="contact-tab"><img src="linkedin.png" alt="">LinkedIn</a>
+                <a href="https://wa.me/+917304431820" class="contact-tab"><img src="wattsapp.png" alt="">WhatsApp me</a>
             </div>
         </section>
 
