--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <header>
-            <div id="logo"><img src="logo.png" alt=""></div>
+            <div id="logo"><img src="images/logo.png" alt=""></div>
             <ul id="nav-tabs">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -28,6 +28,7 @@
                 <li><a href="#experiences">Experience</a></li>
                 <li><a href="#">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
+                <li><a href="Tushar_Dasare.pdf">Resume</a></li>
             </ul>
         </header>
         <section id="main-section">
@@ -38,7 +39,7 @@
                     <a href="#contact-section"><button class="border-btn">Contact me</button></a>
                 </div>
                 <div id="hero-image">
-                    <img src="hero-img.png" alt="">
+                    <img src="images/hero-img.png" alt="">
                 </div>
             </section>
             <section id="about">
@@ -75,7 +76,7 @@
             <div id="skills-container">
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="python-logo.png" alt="">
+                        <img src="images/python-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Python</span>
@@ -83,7 +84,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="django-logo.png" alt="">
+                        <img src="images/django-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Django</span>
@@ -91,7 +92,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="react-logo.png" alt="">
+                        <img src="images/react-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>React.js</span>
@@ -99,7 +100,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="ionic.png" alt="">
+                        <img src="images/ionic.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>React Ionic</span>
@@ -107,7 +108,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="javascript-logo.png" alt="">
+                        <img src="images/javascript-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Javascript</span>
@@ -115,7 +116,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="nodejs-logo.png" alt="">
+                        <img src="images/nodejs-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Node.js</span>
@@ -123,7 +124,7 @@
                 </div>
                 <div class="skill-box">
                     <div class="skill-img">
-                        <img src="git-logo.png" alt="">
+                        <img src="images/git-logo.png" alt="">
                     </div>
                     <div class="skill-name">
                         <span>Git Source <br> control</span>
@@ -136,10 +137,10 @@
         <section id="contact-section">
             <h3 class="heading-center">Contact Me</h3>
             <div id="contact">
-                <a href="mailto:tushardasare1701@gmail.com" class="contact-tab"><img src="gmail.png" alt=""> tushardasare1701@gmail.com</a>
-                <a href="tel:+917304431820" class="contact-tab"><img src="phone.png" alt="">7304431820</a>
-                <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" class="contact-tab"><img src="linkedin.png" alt="">LinkedIn</a>
-                <a href="https://wa.me/+917304431820" class="contact-tab"><img src="wattsapp.png" alt="">WhatsApp me</a>
+                <a href="mailto:tushardasare1701@gmail.com" class="contact-tab"><img src="images/gmail.png" alt=""> tushardasare1701@gmail.com</a>
+                <a href="tel:+917304431820" class="contact-tab"><img src="images/phone.png" alt="">7304431820</a>
+                <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" class="contact-tab"><img src="images/linkedin.png" alt="">LinkedIn</a>
+                <a href="https://wa.me/+917304431820" class="contact-tab"><img src="images/wattsapp.png" alt="">WhatsApp me</a>
             </div>
         </section>
 
