--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div id="email-id">
             <h4>...or just leave your email id</h4>
                 <form action="javascript:void(0)" method="post" id="email-submit-form">
-                    <input type="email" name="email" id="email-input"/>
+                    <input type="email" name="email" id="email-input" placeholder="Email"/>
                     <button type="submit" id="email-submit" onclick="submitEmail()"><img src="images/next.png" alt=""></button>
                 </form>
             </div>
