--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                     };
 
                     xhr.open('GET', url, true);
+            xhr.send();
         }
     </script>
 </html>
