--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#contact-section"><button class="border-btn">Contact me</button></a>
                 </div>
                 <div id="hero-image">
-                    <!-- <img src="images/hero-img.png" alt=""> -->
+                    <img src="images/hero-img.png" alt="">
                 </div>
             </section>
             <section id="about">
