fixed contact chips

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experiences">Experience</a></li>
-                <li><a href="#">My Work</a></li>
+                <li><a href="#work-container">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
                 <li><a href="Tushar_Dasare.pdf">Resume</a></li>
             </ul>
@@ -26,7 +26,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experiences">Experience</a></li>
-                <li><a href="#">My Work</a></li>
+                <li><a href="#work-container">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
                 <li><a href="Tushar_Dasare.pdf">Resume</a></li>
             </ul>
@@ -34,8 +34,8 @@
         <section id="main-section">
             <section id="hero-section">
                 <div id="hero-text">
-                    I'm <span class="name">TUSHAR DASARE</span> <br>
-                    Web Developer with an expertise in React.js & Python
+                    I'm <span class="name">TUSHAR DASARE</span>, <br>
+                    Web Developer with an expertise in Node.js & Python
                     <a href="#contact-section"><button class="border-btn">Contact me</button></a>
                 </div>
                 <div id="hero-image"></div>
