--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                 <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" class="contact-tab"><img src="images/linkedin.png" alt="">LinkedIn</a>
                 <a href="https://wa.me/+917304431820" class="contact-tab"><img src="images/wattsapp.png" alt="">WhatsApp me</a>
                 <a href="https://github.com/tushar0107" class="contact-tab"><img src="images/github-logo.png" alt="">Github</a>
+                <a href="https://www.instagram.com/frozzy.dev/?hl=en" class="contact-tab"><img src="images/instagram.png" alt="">Instagram</a>
             </div>
             <div id="email-id">
             <h4>...or just leave your email id</h4>
