added react native in skills

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <img src="images/react-logo.png" alt="">
                     </div>
                     <div class="skill-name">
-                        <span>React.js</span>
+                        <span>React.JS / React Native</span>
                     </div>
                 </div>
                 <div class="skill-box">
