--- a/index.html
+++ b/index.html
@@ -367,6 +367,26 @@
                        <p><a href="javascript:void(0)" class="project-link" onclick="openProjectPreview('images/travigo.mp4')">Project preview</a></p>
                    </div>
                 </div>
+
+                <!-- Frendly Application -->
+                <div id="frendly" class="project-work">
+                    <style>
+                       
+                    </style>
+                    <img src="images/frendly.png" class="project-img" alt="">
+                    <div class="overlay">
+                        <p>Frendly <br>A social media application</p>
+                        <p>
+                            <img src="images/react-logo.png" class="project-techs" alt="">
+                            <img src="images/nodejs-logo.png" class="project-techs" alt="">
+                            <img src="images/expressjs-logo.png" class="project-techs" alt="">
+                            <img src="images/sql-logo.png" class="project-techs" alt="">
+                        </p>
+                        <p><a href="javascript:void(0)" class="project-link" onclick="openProjectPreview('https://frendly-app.vercel.app')">Project preview</a></p>
+                    </div>
+                 </div>
+
+
             </div>
             <div id="preview-container">
                 <iframe id="previewFrame" src="" frameborder="0"></iframe>
