--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             });
 
             wakeServer('https://restaurant-booking-app-server.onrender.com');
-            wakeServer('https://frendly-app.vercel.app')
+            wakeServer('https://frendly-server.onrender.com')
         });
 
         function toggleMenu(){
