--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section id="hero-section">
                 <div id="hero-text">
                     I'm <span class="name">TUSHAR DASARE</span>, <br>
-                    Web Developer with an expertise in Node.js & Python
+                    Web Developer with an expertise in Python & Javascript
                     <a href="#contact-section"><button class="border-btn">Contact me</button></a>
                 </div>
                 <div id="hero-image"></div>
@@ -166,11 +166,11 @@
                             margin: 0 auto;
                         }
                         #work-container #clock-container{
-                            height: 300px;
+                            width: 100%;
                             aspect-ratio: 1;
                             position: relative;
-                            background-color: #7a7a7a;
                             color: #e7e7e7;
+                            transform: scale(0.9);
                         }
                         #work-container #clock{
                             position: absolute;
