--- a/index.html
+++ b/index.html
@@ -401,12 +401,13 @@
         <section id="contact-section">
             <h3 class="heading-center">Contact Me</h3>
             <div id="contact">
-                <a href="mailto:tushardasare1701@gmail.com" target="_blank" class="contact-tab"><img src="images/gmail.png" alt=""> tushardasare1701@gmail.com</a>
-                <a href="tel:+917304431820" target="_blank" class="contact-tab"><img src="images/phone.png" alt="">7304431820</a>
                 <a href="https://www.linkedin.com/in/tushar-dasare-web-developer" target="_blank" class="contact-tab"><img src="images/linkedin.png" alt="">LinkedIn</a>
-                <a href="https://wa.me/+917304431820" target="_blank" class="contact-tab"><img src="images/wattsapp.png" alt="">WhatsApp me</a>
+                <a href="https://leetcode.com/u/frozzy-dev" target="_blank" class="contact-tab"><img src="images/leetcode.png" alt="">LeetCode</a>
                 <a href="https://github.com/tushar0107" target="_blank" class="contact-tab"><img src="images/github-logo.png" alt="">Github</a>
                 <a href="https://www.instagram.com/frozzy.dev/?hl=en" target="_blank" class="contact-tab"><img src="images/instagram.png" alt="">Instagram</a>
+                <a href="mailto:tushardasare1701@gmail.com" target="_blank" class="contact-tab"><img src="images/gmail.png" alt=""> tushardasare1701@gmail.com</a>
+                <a href="tel:+917304431820" target="_blank" class="contact-tab"><img src="images/phone.png" alt="">7304431820</a>
+                <a href="https://wa.me/+917304431820" target="_blank" class="contact-tab"><img src="images/wattsapp.png" alt="">WhatsApp me</a>
             </div>
             <div id="email-id">
             <h4>...or just leave your email id</h4>
