added brick breaker game

--- a/index.html
+++ b/index.html
@@ -385,6 +385,22 @@
                         <p><a href="javascript:void(0)" class="project-link" onclick="openProjectPreview('https://frendly-app.vercel.app')">Project preview</a></p>
                     </div>
                  </div>
+                
+                 <div id="brick-breaker" class="project-work">
+                    <style>
+                       
+                    </style>
+                    <img src="images/brick-breaker.png" class="project-img" alt="">
+                    <div class="overlay">
+                        <p>Brick Breaker Arcade game</p>
+                        <p>
+                            <img src="images/javascript-logo.png" class="project-techs" alt="">
+                        </p>
+                        <p>
+                            <a href="brick.html" target="_blank" class="project-link">Project preview</a>
+                        </p>
+                    </div>
+                 </div>
 
 
             </div>
