--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#experiences">Experience</a></li>
                 <li><a href="#work-container">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
-                <li><a href="Tushar_Dasare.pdf">Resume</a></li>
+                <li><a href="https://tushar07.pythonanywhere.com/media/files/Tushar-Dasare.pdf">Resume</a></li>
             </ul>
             <div id="menu-btn" onclick="toggleMenu()">
                 <div class="menu-bars" id="bar1"></div>
@@ -28,7 +28,7 @@
                 <li><a href="#experiences">Experience</a></li>
                 <li><a href="#work-container">My Work</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
-                <li><a href="Tushar_Dasare.pdf">Resume</a></li>
+                <li><a href="https://tushar07.pythonanywhere.com/media/files/Tushar-Dasare.pdf">Resume</a></li>
             </ul>
         </header>
         <section id="main-section">
