added new project

--- a/index.html
+++ b/index.html
@@ -299,6 +299,19 @@
                     </script>
                 </div>
 
+                <!-- A Fashion Retail Store using Node.js -->
+                <div id="project-ecommerce" class="project-work">
+                   <img src="images/revalyn.png" class="project-img" alt="">
+                   <div class="overlay">
+                       <p>A Fashion Retail Store using Node.js & Next,js</p>
+                       <p>
+                           <img src="images/nodejs-logo.png" class="project-techs" alt="">
+                           <img src="images/nextjs.jpg" class="project-techs" alt="">
+                       </p>
+                       <p><a href="javascript:void(0)" class="project-link" onclick="openProjectPreview('https://revalyn.vercel.app')">Project preview</a></p>
+                   </div>
+                </div>
+
                 <!-- E-commerce app using Django -->
                 <div id="project-ecommerce" class="project-work">
                    <style>
